--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <br>
             <br>
             <footer>
-                &#169; This Calculator belongs to Samantha Edmonds
+                &#169; Everyone Can Get Rich
             </footer>
         </div>
         
